<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_discount_code"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/generatedistxt"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_amount"
        android:layout_marginTop="20dp"
        android:id="@+id/amount"
        android:inputType="number"
        android:layout_marginStart="20dp"
        android:textSize="12sp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generatedistxt"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_memo"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:textSize="12sp"
        android:layout_marginEnd="20dp"
        android:id="@+id/memo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/cancel"
        android:id="@+id/canclebtn"
        android:layout_marginTop="20dp"
        android:background="@drawable/strokebg"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memo"
        app:layout_constraintEnd_toStartOf="@+id/submitbtn"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:id="@+id/submitbtn"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:background="@drawable/strokebg"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/canclebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memo"
        />

</androidx.constraintlayout.widget.ConstraintLayout>