<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerActivity">


   <androidx.cardview.widget.CardView
       android:layout_width="0dp"
       android:layout_height="80dp"
       app:cardCornerRadius="10dp"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="20dp"
       android:layout_marginStart="15dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toStartOf="@+id/totalspentsection"
       android:id="@+id/totalamountsection"
       app:cardBackgroundColor="#59981A">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/total_amount"
          android:textColor="@color/white"
          android:layout_marginTop="10dp"/>

      <TextView
          android:id="@+id/totalamount"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:textColor="@color/white"
          android:layout_gravity="center"/>

      </LinearLayout>

   </androidx.cardview.widget.CardView>

   <androidx.cardview.widget.CardView
       android:layout_width="0dp"
       android:layout_height="80dp"
       app:layout_constraintStart_toEndOf="@+id/totalamountsection"
       android:layout_marginTop="20dp"
       app:layout_constraintTop_toTopOf="parent"
       app:cardCornerRadius="10dp"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginStart="15dp"
       android:layout_marginEnd="20dp"
       android:id="@+id/totalspentsection"
       app:cardBackgroundColor="#FFA500">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:orientation="vertical">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_spent"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/totalspent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

         </LinearLayout>

      </LinearLayout>

   </androidx.cardview.widget.CardView>


   <TextView
       android:layout_width="match_parent"
       android:layout_height="40dp"
       android:id="@+id/viewdiscounts"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"
       android:text="@string/show_all_discount_code"
       android:onClick="showDiscountList"
       android:gravity="center"
       android:textColor="@color/white"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="20dp"
       android:background="@drawable/rectanglebg"
       app:layout_constraintTop_toBottomOf="@+id/totalamountsection"
       />

   <TextView
       android:layout_width="match_parent"
       android:layout_height="40dp"
       android:id="@+id/redeem"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"
       android:text="@string/generate_discount_code"
       android:onClick="showDiscountDialog"
       android:gravity="center"
       android:textColor="@color/white"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="10dp"
       android:background="@drawable/rectanglebg"
       app:layout_constraintTop_toBottomOf="@+id/viewdiscounts"
       />



   <TextView
       android:layout_width="0dp"
       android:layout_height="40dp"
       android:id="@+id/redeemcode"
       android:layout_marginStart="10dp"
       android:textSize="12sp"
       android:visibility="gone"
       android:textColor="@color/black"
       app:layout_constraintEnd_toStartOf="@+id/copy"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="10dp"
       android:background="@drawable/greybg"
       app:layout_constraintTop_toBottomOf="@+id/redeem"
       />


   <TextView
       android:layout_width="90dp"
       android:layout_height="40dp"
       android:id="@+id/copy"
       android:visibility="gone"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@+id/redeemcode"
       android:text="Copy"
       android:gravity="center"
       android:textColor="@color/white"
       android:layout_marginTop="10dp"
       android:background="@drawable/rectanglebg"
       app:layout_constraintTop_toBottomOf="@+id/redeem"
       />

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      android:text="@string/transaction_details"
      android:textColor="@color/black"
      android:textSize="14sp"
       android:id="@+id/transactiondetialtxt"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="20dp"
       app:layout_constraintTop_toBottomOf="@+id/redeemcode"
       android:layout_marginStart="10dp"
      />

   <androidx.recyclerview.widget.RecyclerView
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:id="@+id/transactionrecycler"
       android:layout_marginStart="10dp"
       android:layout_marginBottom="10dp"
       android:layout_marginEnd="10dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/transactiondetialtxt"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       android:layout_marginTop="20dp"
       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
       />

</androidx.constraintlayout.widget.ConstraintLayout>