<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="transactionmodel"
            type="com.shopify.rewardifyappmodule.TransactionModel" />
    </data>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/rewardifyidtxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toStartOf="@+id/rewardifyid"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/rewardifyid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{transactionmodel.id}"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/rewardifyidtxt"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/rewardifyamount_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toStartOf="@+id/rewardifyid"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rewardifyidtxt" />

                <TextView
                    android:id="@+id/rewardifyamount"
                    android:layout_width="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:text="@{transactionmodel.amount}"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/rewardifyamount_txt"
                    app:layout_constraintTop_toBottomOf="@+id/rewardifyidtxt"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/openbalance_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/open_balance"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toStartOf="@+id/openbalance"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rewardifyamount_txt" />

                <TextView
                    android:id="@+id/openbalance"
                    android:layout_width="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:text="@{transactionmodel.customerOpenBalance}"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/openbalance_txt"
                    app:layout_constraintTop_toBottomOf="@+id/rewardifyamount_txt"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/type_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toStartOf="@+id/type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/openbalance_txt" />

                <TextView
                    android:id="@+id/type"
                    android:layout_width="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:text="@{transactionmodel.transactionType}"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/type_txt"
                    app:layout_constraintTop_toBottomOf="@+id/openbalance_txt"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/effective_at_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/effective_date"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toStartOf="@+id/effective_at"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/type" />

                <TextView
                    android:id="@+id/effective_at"
                    android:layout_width="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:text="@{transactionmodel.effectiveAt}"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/effective_at_txt"
                    app:layout_constraintTop_toBottomOf="@+id/type"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
